# elevate_live

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  liveclass.toml  pyproject.toml
bitforge/: broadcaster.py  config.py  logging_setup.py  protocol.py  run.py  serve.py  server.py  tree.py
docs/superpowers/plans/: 2026-06-23-liveclass.md
docs/superpowers/specs/: 2026-06-23-liveclass-design.md
extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json
extension/src/: config.ts  connection.ts  extension.ts  paths.ts
lesson/: .env
liveclass/: broadcaster.py  config.py  protocol.py  run.py  server.py  tree.py
static/: index.html
tests/: conftest.py  test_broadcaster.py  test_config.py  test_logging.py  test_protocol.py  test_run.py  test_server_broadcast.py  test_server_file.py  test_server_page.py  test_tree.py  test_view_mode.py
