[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liveclass"
version = "0.1.0"
description = "View-only live code/terminal broadcast for teaching"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "watchdog",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["liveclass*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
